--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-speech-recognition": "^3.9.1",
+    "speak-tts": "^2.0.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
