--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.18.6",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
@@ -38,9 +39,9 @@
       "not op_mini all"
     ],
     "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+      "last 2 firefox version",
+      "last 2 safari version",
+      "last 2 Chrome versions"
     ]
   }
 }
